<resources>
    <string name="app_name">Academe Notes</string>
    <string name="L_button">Login</string>
    <string name="msg1">Made By Atharv</string>
    <string name="R_button">Register</string>
    <string name="year">Year</string>
    <string name="year2">2nd Year</string>
    <string name="year3">3rd Year</string>
    <string name="year4">4th Year</string>
    <string name="bGo">GO</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="person">Person</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="aboutus">About</string>
    <string name="kunal_shimpi">Kunal Shimpi</string>
    <string name="team_member">Team Member</string>
    <string name="atharv_shimpi">Atharv Shimpi</string>
    <string name="aditi_mali">Aditi Mali</string>
    <string name="name">Name:</string>
    <string name="sap">SAP:</string>
    <string name="branch">Branch:</string>
</resources>