<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".profileuser">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/profile"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/Profile"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/sap"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sap"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="Year:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/year"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/branch"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentBottom="true"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
